rnsc/test_data/integration/error/parser/type_hints/cp_idx/not_numeric.rns
.class public MainClass
.super @cp_idx not_a_number ; explicit constant pool index
